@@ -9,6 +9,8 @@ ctags-NEXT (Wed Oct 11 2006)
 * Added support for PHP5 features:
   interfaces and static/public/protected/private functions
 * Added support for Perl's 'package' keyword.
+* Added support for Perl's multi-line subroutine, package, and constant
+  definitions.
 
 ctags-5.6 (Mon May 29 2006)
 * Reformatted code for independence of tab stop setting.
